disabled findbugs, more java9 module refactoring