@@ -460,10 +460,10 @@
 					<artifactId>spring-boot-maven-plugin</artifactId>
 					<version>${spring.boot.version}</version>
 					<configuration>
-					<arguments>
-						<!-- this has to be here WITHOUT an actual value, otherwise the spring-boot:run mojo wouldn't work -->
-						<argument>--spring.main.allow-bean-definition-overriding=true</argument>
-					</arguments>
+						<arguments>
+							<!-- this has to be here WITHOUT an actual value, otherwise the spring-boot:run mojo wouldn't work -->
+							<argument>--spring.main.allow-bean-definition-overriding=true</argument>
+						</arguments>
 					</configuration>
 					<executions>
 						<execution>
@@ -564,6 +564,9 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.18.1</version>
+					<configuration>
+						<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=deny</argLine>
+					</configuration>
 				</plugin>
 
 				<plugin>
@@ -574,6 +577,7 @@
 						<includes>
 							<include>**/*IT.java</include>
 						</includes>
+						<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=deny</argLine>
 					</configuration>
 					<executions>
 						<execution>
