@@ -13,9 +13,21 @@
 
 	<build>
 		<plugins>
+<!-- 			<plugin> -->
+<!-- 				<groupId>org.codehaus.mojo</groupId> -->
+<!-- 				<artifactId>build-helper-maven-plugin</artifactId> -->
+<!-- 			</plugin> -->
+			
+			<!-- COMPILING -->
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<compilerArgs>
+						<compilerArg>--add-modules</compilerArg>
+						<compilerArg>java.xml.ws.annotation</compilerArg>
+					</compilerArgs>
+				</configuration>
 			</plugin>
 
 			<!-- RESOURCE GENERTATION -->
